# csplitb

./: .gitignore  README.md  csplitb.py  pyproject.toml  setup.py  testdata.txt
csplitb/: __init__.py
scripts/: csplitb
